[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tunnelwiz"
version = "1.0"
description = "Compute and visualize biomolecular tunnels."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{ name = "Michael Krivan" }]
keywords = ["MDAnalysis", "tunnel", "structural-biology", "visualization"]

dependencies = [
  "numpy",
  "scipy",
  "MDAnalysis",
  "pandas",
  "plotly",
  "rdkit",
]

[project.optional-dependencies]
viz = [
  "nglview",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
